fixed some of the layout issues but still cant get the footer and the next section to render

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html, body {
   font-family: "Parkinsans", sans-serif;
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%236082bd' fill-opacity='0.47' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");  
+  overflow: auto;
 }
 
 .header {
@@ -17,7 +18,7 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 10vh;
+  min-height: 10vh;
   width: 100%;
 }
 
@@ -59,7 +60,7 @@ html, body {
   display: flex;
   flex-direction: column;
   color: #022b3a;
-  height: 90vh;
+  min-height: 90vh;
   width: 100vw;
 }
 
@@ -138,12 +139,26 @@ html, body {
   max-width: 400px;
 }
 
+.tech-stack {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  width: 100vw;
+  height: 300px;
+}
+
+.tech-stack > * {
+  width: 10px;
+  height: 10px;
+}
+
 .footer {
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10vh;
+  min-height: 10vh;
   width: 100%;
 }
 
